--- a/src/app/dim-ui/dim-button.scss
+++ b/src/app/dim-ui/dim-button.scss
@@ -7,7 +7,7 @@
   padding: 4px 10px;
   display: inline-block;
   background-color: var(--theme-button-bg);
-  color: var(--theme-text);
+  color: var(--theme-button-txt);
   font-size: 12px;
   line-height: calc(16 / 12);
   font-family: 'Open Sans', sans-serif, 'Destiny Symbols';
