--- a/src/app/store-stats/StoreStats.m.scss
+++ b/src/app/store-stats/StoreStats.m.scss
@@ -7,7 +7,7 @@
   align-items: center;
   font-size: 11px;
   margin-top: 9px;
-  color: #ccc;
+  color: var(--theme-header-characters-txt);
 
   img {
     justify-self: center;
