--- a/src/app/_theme-dark.scss
+++ b/src/app/_theme-dark.scss
@@ -1,24 +1,25 @@
-// Theme variables
-:root {
+// Dark theme
+[data-theme='theme-dark'] {
   // Base colours
-  --theme-accent-primary: var(--dim-brand); // Interaction styles (hover, active, focus)
+  --theme-accent-primary: #ff3f00; // Interaction styles (hover, active, focus)
   --theme-accent-secondary: #68a0b7; // Secondary interactions
+
+  // More vibrant P3 colourspace tints for displays that support them
+  @supports (color: color(display-p3 1 1 1)) {
+    --theme-accent-primary: oklch(0.66 0.24 37.65);
+  }
 
   // Generic fills for modal backgrounds (see below)
   --theme-fill-modal: #000; // Base fill for popups, drawers, dropdowns etc
   --theme-fill-modal-actions: #161616; // Layered/contextual modals (search, item actions)
 
   // Text
-  --theme-text: #fff;
-  --theme-text-invert: #000;
+  --theme-text: #ccc;
+  --theme-text-invert: #fff;
 
   // Buttons
   --theme-button-bg: rgba(255, 255, 255, 0.2);
   --theme-button-text: white;
-
-  // Icons
-  --theme-icon-tile: transparent;
-  --theme-header-characters-icon: 1; // 0-1 (fully) scale of how heavily to invert icon from grey -> white
 
   // Input field (text boxes and text areas)
   --theme-input-bg: #333;
@@ -27,14 +28,14 @@
   --theme-drop-shadow: 0 0 18px 0 #000;
 
   // Tooltips
-  --theme-tooltip-header-bg: #0a0a0f;
-  --theme-tooltip-body-bg: #151523;
-  --theme-tooltip-border: #8e8e9e;
+  --theme-tooltip-header-bg: #000;
+  --theme-tooltip-body-bg: #1a1a1a;
+  --theme-tooltip-border: #555;
   --theme-tooltip-minimal-bg: #5d5970;
 
   // App background gradient pattern
-  --theme-app-bg-gradient-start: hsl(240, 20%, 28%);
-  --theme-app-bg-gradient-end: hsl(240, 27%, 12%);
+  --theme-app-bg-gradient-start: hsl(200, 6%, 19%);
+  --theme-app-bg-gradient-end: hsl(240, 5%, 9%);
   --theme-app-bg-gradient: radial-gradient(
     circle at 50% 70px,
     var(--theme-app-bg-gradient-start) 0%,
@@ -44,12 +45,12 @@
   // App
   --theme-app-bg: var(--theme-app-bg-gradient);
   // The color of PWA elements like the title bar. This cannot be a gradient.
-  --theme-pwa-chrome-background: #202034;
+  --theme-pwa-chrome-background: #000;
 
   // Header
-  --theme-header-nav-bg: var(--theme-app-bg-gradient);
+  --theme-header-nav-bg: black;
   --theme-header-nav-slideout-menu-bg: var(--theme-fill-modal);
-  --theme-header-characters-bg: var(--theme-app-bg-gradient);
+  --theme-header-characters-bg: rgba(15, 15, 15, 0.9);
 
   // Dropdown menu
   --theme-dropdown-menu-bg: var(--theme-fill-modal);
@@ -57,22 +58,26 @@
   // Search
   --theme-search-bg: rgba(255, 255, 255, 0.2);
   --theme-search-dropdown-bg: var(--theme-fill-modal-actions);
-  --theme-search-dropdown-border: transparent;
+  --theme-search-dropdown-border: rgba(255, 255, 255, 0.5);
 
-  // Items
-  --theme-item-polaroid: #ddd;
-  --theme-item-polaroid-txt: var(--theme-text-invert);
-  --theme-item-polaroid-hover-border: #ddd;
-  --theme-item-polaroid-masterwork: #eade8b;
-  --theme-item-polaroid-masterwork-txt: var(--theme-text-invert);
-  --theme-item-polaroid-masterwork-border: white;
+  // Items 'polaroid' framed icons
+  --theme-item-polaroid: #567;
+  --theme-item-polaroid-txt: white;
+  --theme-item-polaroid-masterwork: black;
+  --theme-item-polaroid-masterwork-txt: #e8a534;
+  --theme-item-polaroid-masterwork-border: #ae791e;
 
   // Item popup
-  --theme-item-popup-border: transparent;
+  --theme-item-popup-border: rgba(255, 255, 255, 0.5);
   --theme-item-popup-arrow: var(--theme-fill-modal-actions);
   --theme-item-popup-actions-bg: var(--theme-fill-modal-actions);
-  --theme-item-popup-panel-bg: #333; // Panels for progress (masterwork, crafted, catalyst) and archetype
-  --theme-item-popup-progress-bar-bg: #222;
+  --theme-item-popup-panel-bg: rgba(
+    255,
+    255,
+    255,
+    0.08
+  ); // Panels for progress (masterwork, crafted, catalyst) and archetype
+  --theme-item-popup-progress-bar-bg: rgba(0, 0, 0, 0.3);
 
   // Item feed
   --theme-item-feed-bg: var(--theme-fill-modal);
@@ -81,6 +86,6 @@
   --theme-item-sheet-bg: var(--theme-fill-modal);
 
   // Organizer
-  --theme-organizer-row-odd-bg: #27263a;
-  --theme-organizer-row-even-bg: #1d1c2b;
+  --theme-organizer-row-odd-bg: #171717;
+  --theme-organizer-row-even-bg: #2b2b2b;
 }
