--- a/src/app/item-popup/ItemObjectives.scss
+++ b/src/app/item-popup/ItemObjectives.scss
@@ -53,7 +53,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: var(--theme-text);
+  color: white;
 }
 
 .objective-integer {
