--- a/src/app/item-feed/ItemFeed.m.scss
+++ b/src/app/item-feed/ItemFeed.m.scss
@@ -1,11 +1,17 @@
 @use '../variables.scss' as *;
 
+.list {
+  padding: 10px;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 .item {
   composes: flexRow from '../dim-ui/common.m.scss';
   align-items: flex-start;
   margin: 8px 0 16px 0;
-  will-change: auto;
-  transform-origin: calc(var(--item-size) / 2) calc(var(--item-size) / 2);
 }
 
 .info {
@@ -13,9 +19,7 @@
 }
 
 .title {
-  text-transform: uppercase;
-  font-weight: 600;
-  font-family: Helvetica, Arial, sans-serif;
+  @include destiny-header;
   text-decoration: none;
   font-size: 14px;
 }
