--- a/src/app/dim-ui/VirtualList.m.scss
+++ b/src/app/dim-ui/VirtualList.m.scss
@@ -10,6 +10,7 @@
 .contentsPlaceholder {
   width: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .virtualArea {
@@ -17,4 +18,11 @@
   top: 0;
   left: 0;
   width: 100%;
+
+  > * {
+    // Prevent the margins of elements inside the item containers from escaping
+    // this container. Otherwise the height measurements will be wrong for the
+    // virtual list.
+    overflow: hidden;
+  }
 }
