--- a/src/app/dim-ui/PressTip.m.scss
+++ b/src/app/dim-ui/PressTip.m.scss
@@ -6,6 +6,19 @@ $horizontal-padding: 11px;
   user-select: none;
   touch-action: none;
   -webkit-touch-callout: none;
+
+  @media (hover: hover) {
+    &:hover {
+      text-decoration: 3px underline dotted var(--theme-tooltip-underline);
+      text-underline-offset: 4px;
+
+      &::before,
+      &::after {
+        display: inline-block !important;
+        text-decoration: none !important;
+      }
+    }
+  }
 }
 
 .tooltip {
