--- a/src/app/inventory/ItemIcon.m.scss
+++ b/src/app/inventory/ItemIcon.m.scss
@@ -64,24 +64,6 @@ $commonBg: #366f42;
 
 // The overlay image for masterworks and Deepsight weapons
 .backgroundOverlay {
-  // -0.4px to force the browser round down rendered value not the actual value
-  // If it rounds up that leaves a 1px gap between the image and the border
-  //$new-border-width: $item-border-width - 0.4px;
-  // $new-border-width: $item-border-width;
-
-  // box-sizing: border-box;
-  // top: $new-border-width;
-  // left: $new-border-width;
-  // border-width: 0;
-  // height: calc(var(--item-size) - #{2 * $new-border-width});
-  // width: calc(var(--item-size) - #{2 * $new-border-width});
-  // position: absolute;
-  // pointer-events: none;
-  // background-repeat: no-repeat;
-  // background-position: center;
-  // background-size: calc((var(--item-size) - #{2 * $new-border-width}) * (96 / 90))
-  //   calc((var(--item-size) - #{2 * $new-border-width}) * (96 / 90));
-
   position: absolute;
   box-sizing: border-box;
   height: calc(var(--item-size) - ($item-border-width * 2));
@@ -90,87 +72,14 @@ $commonBg: #366f42;
   left: $item-border-width;
 }
 .legendaryMasterwork {
-  border-width: 1px;
-  border-style: solid;
-  border-image-slice: 1;
-  border-image-source: conic-gradient(
-    from 45deg at 50% 50%,
-    var(--theme-item-polaroid-masterwork-border) 0%,
-    transparent 24%,
-    transparent 25%,
-    var(--theme-item-polaroid-masterwork-border) 50%,
-    var(--theme-item-polaroid-masterwork-border) 50%,
-    transparent 74%,
-    transparent 75%,
-    var(--theme-item-polaroid-masterwork-border) 100%
-  );
-  //background-image: radial-gradient(circle at 50% 140%, rgba(255,255,255,.1) 0%, transparent 50%);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2) 0%, transparent 50%),
-    linear-gradient(transparent 50%, rgba(255, 255, 255, 0.2) 150%);
-  background-repeat: no-repeat;
+  @include masterwork(0.05, 0.05, 0.02);
 }
+
 .exoticMasterwork {
-  border-width: 1px;
-  border-style: solid;
-  border-image-slice: 1;
-  border-image-source: conic-gradient(
-    from 45deg at 50% 50%,
-    var(--theme-item-polaroid-masterwork-border) 0%,
-    transparent 24%,
-    transparent 25%,
-    var(--theme-item-polaroid-masterwork-border) 50%,
-    var(--theme-item-polaroid-masterwork-border) 50%,
-    transparent 74%,
-    transparent 75%,
-    var(--theme-item-polaroid-masterwork-border) 100%
-  );
-
-  $pttrn-even: rgba(255, 255, 255, 0.05);
-  $pttrn-odd: rgba(0, 0, 0, 0.02);
-
-  // Masterwork pattern a la .src/images/exotic-masterwork.png
-  // Dark gradient from top, light gradient from bottom, striped diamond overlay for texture
-  // TODO check whether rendering a bunch of gradients is less performant than slapping in a PNG
-  background: linear-gradient(rgba(0, 0, 0, 0.2) 0%, transparent 50%),
-    linear-gradient(transparent 50%, white 150%),
-    repeating-linear-gradient(
-        to bottom right,
-        $pttrn-even 0%,
-        $pttrn-even 5%,
-        $pttrn-odd 5%,
-        $pttrn-odd 10%
-      )
-      bottom right,
-    repeating-linear-gradient(
-        to bottom left,
-        $pttrn-even 0%,
-        $pttrn-even 5%,
-        $pttrn-odd 5%,
-        $pttrn-odd 10%
-      )
-      bottom left,
-    repeating-linear-gradient(
-        to top left,
-        $pttrn-even 0%,
-        $pttrn-even 5%,
-        $pttrn-odd 5%,
-        $pttrn-odd 10%
-      )
-      top left,
-    repeating-linear-gradient(
-        to top right,
-        $pttrn-even 0%,
-        $pttrn-even 5%,
-        $pttrn-odd 5%,
-        $pttrn-odd 10%
-      )
-      top right;
-  background-repeat: no-repeat;
-  background-size: 100%, 100%, 50% 50%, 50% 50%, 50% 50%, 50% 50%;
+  @include masterwork(0.2, 0.05, 0.08);
 }
 .deepsightBorder {
   border: 2px solid $deepsight-border-color;
-  // background-image: url('../../images/deepsight.png');
 
   &.legendaryMasterwork {
     background-image: url('../../images/masterwork.png');
