--- a/src/app/store-stats/CharacterStats.scss
+++ b/src/app/store-stats/CharacterStats.scss
@@ -46,8 +46,6 @@
       width: 14px;
       margin-right: 2px;
       opacity: 1;
-      // Make all icons black and then invert
-      filter: brightness(0) invert(var(--theme-header-characters-icon));
     }
   }
 
@@ -77,6 +75,9 @@
           height: 17px;
           width: 17px;
         }
+        img[src^='data'] {
+          filter: invert(1);
+        }
         .powerStat {
           font-size: 125%;
         }
@@ -86,17 +87,16 @@
           &::before,
           &::after {
             font-size: 13px;
-            color: #aaa;
+            color: var(--theme-header-characters-txt);
+            margin-left: 4px;
+            margin-right: 4px;
+            text-decoration: none !important;
           }
           &::before {
             content: '=';
-            margin-left: 4px;
-            margin-right: 4px;
           }
           &::after {
             content: '+';
-            margin-left: 4px;
-            margin-right: 4px;
           }
         }
       }
