--- a/src/app/progress/milestone.scss
+++ b/src/app/progress/milestone.scss
@@ -62,7 +62,8 @@ button.milestone-quest {
   }
 
   .milestone-description {
-    color: #a1a2a2;
+    color: var(--theme-text);
+    opacity: 0.6;
     white-space: pre-wrap;
     line-height: 1.3;
     max-height: 3.9em;
