--- a/src/app/search/SearchBar.m.scss
+++ b/src/app/search/SearchBar.m.scss
@@ -13,6 +13,8 @@
 .open {
   border-bottom-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
+
+  box-shadow: inset 0 0 0 1px var(--theme-search-dropdown-border);
 }
 
 .menu {
@@ -27,9 +29,11 @@
   padding: 0;
   left: 0;
   right: 0;
-  top: $search-bar-height;
+  top: calc($search-bar-height - 1px);
   border-bottom-left-radius: $theme-corner-radius-search;
   border-bottom-right-radius: $theme-corner-radius-search;
+  box-shadow: inset 0 -1px 0 0 var(--theme-search-dropdown-bg),
+    inset 0 -1px 0 1px var(--theme-search-dropdown-border);
 
   @include phone-portrait {
     top: calc(100% + 1px);
