--- a/src/app/store-stats/VaultCapacity.m.scss
+++ b/src/app/store-stats/VaultCapacity.m.scss
@@ -9,7 +9,7 @@
   img {
     height: 14px;
     width: 14px;
-    filter: saturate(0) brightness(0.75) invert(var(--theme-header-characters-icon));
+    filter: invert(1);
     opacity: 0.7;
   }
 }
