Tewak polaroid tints. Add clickable pursuit hover.

--- a/src/app/inventory/RatingIcon.m.scss
+++ b/src/app/inventory/RatingIcon.m.scss
@@ -1,7 +1,7 @@
 .godroll {
   font-size: 0.8em !important;
   margin-right: auto;
-  color: #0b486b;
+  color: var(--theme-item-polaroid-godroll);
 }
 
 .trashlist {
