--- a/src/app/_theme-dark.scss
+++ b/src/app/_theme-dark.scss
@@ -63,11 +63,13 @@
   --theme-search-dropdown-border: rgba(255, 255, 255, 0.2);
 
   // Items 'polaroid' framed icons
-  --theme-item-polaroid: #567;
+  --theme-item-polaroid: #456;
   --theme-item-polaroid-txt: white;
   --theme-item-polaroid-masterwork: black;
   --theme-item-polaroid-masterwork-txt: #e8a534;
   --theme-item-polaroid-masterwork-border: #ae791e;
+  --theme-item-polaroid-godroll: white;
+  --theme-item-polaroid-trashroll: #d14334;
 
   // Item popup
   --theme-item-popup-border: #333;
