--- a/src/app/_theme.scss
+++ b/src/app/_theme.scss
@@ -64,6 +64,8 @@
   --theme-item-polaroid-masterwork: #eade8b;
   --theme-item-polaroid-masterwork-txt: var(--theme-text-invert);
   --theme-item-polaroid-masterwork-border: white;
+  --theme-item-polaroid-godroll: #0b486b;
+  --theme-item-polaroid-trashroll: #d14334;
 
   // Item popup
   --theme-item-popup-border: #222;
