Tidied up text colours (char header text vs secondary text)

--- a/src/app/_theme-dark.scss
+++ b/src/app/_theme-dark.scss
@@ -16,6 +16,7 @@
   // Text
   --theme-text: #ccc;
   --theme-text-invert: #fff;
+  --theme-text-secondary: #777;
 
   // Buttons
   --theme-button-bg: rgba(255, 255, 255, 0.2);
@@ -52,7 +53,7 @@
   --theme-header-nav-bg: black;
   --theme-header-nav-slideout-menu-bg: var(--theme-fill-modal);
   --theme-header-characters-bg: rgba(15, 15, 15, 0.9);
-  --theme-header-characters-txt: #888;
+  --theme-header-characters-txt: #aaa;
 
   // Dropdown menu
   --theme-dropdown-menu-bg: var(--theme-fill-modal);
