--- a/src/app/records/Record.m.scss
+++ b/src/app/records/Record.m.scss
@@ -35,8 +35,7 @@
 
   p {
     margin: 0 0 8px 0;
-    color: var(--theme-text);
-    opacity: 0.6;
+    color: var(--theme-text-secondary);
     white-space: pre-wrap;
   }
 
