Masterwork overlay tweaks

--- a/src/app/_theme.scss
+++ b/src/app/_theme.scss
@@ -64,7 +64,7 @@
   --theme-item-polaroid-hover-border: #ddd;
   --theme-item-polaroid-masterwork: #eade8b;
   --theme-item-polaroid-masterwork-txt: var(--theme-text-invert);
-  --theme-item-polaroid-masterwork-border: white;
+  --theme-item-polaroid-masterwork-border: #ae791e;
   --theme-item-polaroid-godroll: #0b486b;
   --theme-item-polaroid-trashroll: #d14334;
 
