--- a/src/app/item-popup/ItemPopup.m.scss
+++ b/src/app/item-popup/ItemPopup.m.scss
@@ -142,3 +142,30 @@
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
+.itemPopup {
+  :global(.sheet-header) {
+    padding: 0;
+    border: none;
+  }
+  :global(.sheet-close) {
+    padding: 12px 10px;
+    color: black;
+    opacity: 0.7;
+  }
+  :global(.sheet-handle) div {
+    background-color: black;
+    opacity: 0.7;
+  }
+
+  &.uncommon,
+  &.rare,
+  &.legendary {
+    :global(.sheet-close) {
+      color: var(--theme-text);
+    }
+    :global(.sheet-handle) div {
+      background-color: white;
+    }
+  }
+}
