Switch to class from data-theme. Removed light theme.

--- a/src/app/_theme-dark.scss
+++ b/src/app/_theme-dark.scss
@@ -1,5 +1,5 @@
 // Dark theme
-[data-theme='theme-dark'] {
+.theme-dark {
   // Base colours
   --theme-accent-primary: #ff3f00; // Interaction styles (hover, active, focus)
   --theme-accent-secondary: #68a0b7; // Secondary interactions
