Derive PWA tint from theme variable applied to <body>…
Renamed pwa variable to remove reference to chrome (since this is respected by other browsers)

--- a/src/app/_theme-dark.scss
+++ b/src/app/_theme-dark.scss
@@ -47,7 +47,7 @@
   // App
   --theme-app-bg: var(--theme-app-bg-gradient);
   // The color of PWA elements like the title bar. This cannot be a gradient.
-  --theme-pwa-chrome-background: #000;
+  --theme-pwa-background: #000;
 
   // Header
   --theme-header-nav-bg: black;
