--- a/src/app/_theme.scss
+++ b/src/app/_theme.scss
@@ -42,7 +42,7 @@
   // App
   --theme-app-bg: var(--theme-app-bg-gradient);
   // The color of PWA elements like the title bar. This cannot be a gradient.
-  --theme-pwa-chrome-background: #202034;
+  --theme-pwa-background: #202034;
 
   // Header
   --theme-header-nav-bg: var(--theme-app-bg-gradient);
